# ARIA

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  TODO.md  alembic.ini  backtest.py  docker-compose.yml  main.py  montecarlo.py  pyproject.toml  pytest.ini  sensitivity.py  stress.py  wfo.py
.github/workflows/: ci.yml
ai/: prompts.py  session_analyst.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
analysis/: confluence.py  indicators.py  mtf.py  smc.py
api/: __init__.py  server.py
backtest/: engine.py  hypothesis.py  mc_gate.py  metrics.py  montecarlo.py  multi_pair.py  oos_check.py  wfo.py
config/: pairs_config.py  settings.py
core/: ab_testing.py  adaptive_learning.py  autonomous_pipeline.py  brain.py  capital.py  experiment_generator.py  hypothesis_queue.py  mistake_detector.py  paper_trader.py  pattern_library.py  performance_attribution.py  pipeline_log.py  portfolio.py  regime_classifier.py  risk_log.py  session.py  strategy.py  strategy_equity.py  strategy_scorer.py
dashboard/: app.py
data/: cache.py  calendar.py  cleaner.py  mt5_feed.py  sentiment.py
db/: hypothesis_queue.jsonl  ml_samples.jsonl  models.py  pattern_library.jsonl  pipeline_log.jsonl  session.py
execution/: emergency.py  mt5_client.py  order_manager.py  trade_lifecycle.py
knowledge/: monthly_report.py  obsidian.py  weekly_report.py
ml/: features.py  performance.py  predictor.py  trainer.py
notifications/: telegram.py
research/: __init__.py  chief_agent.py  dedup.py  note_writer.py  scrapers.py
scheduler/: tasks.py
signals/: entry.py  filter.py  scanner.py
strategies/: __init__.py  mean_reversion.py  range_trading.py  session_breakout.py
tests/: conftest.py  test_adaptive_learning.py  test_backtest_engine.py  test_capital.py  test_confluence.py  test_integration.py  test_metrics.py
