[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "analysis", "signals", "execution", "ai", "dashboard", "data", "db", "knowledge", "scheduler", "config"]

[project]
name = "aria"
version = "1.0.0"
description = "ARIA — Autonomous Research & Intelligent Allocation trading system"
requires-python = ">=3.11"

dependencies = [
    # AI
    "anthropic>=0.40.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "ta>=0.11.0",
    "scikit-learn>=1.4.0",
    # Dashboard
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.20.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.32.0",
    # API server
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    # HTML scraping (ForexFactory calendar)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Notifications
    "python-telegram-bot>=21.0",
    # ML
    "lightgbm>=4.0.0",
    # Experiment tracking + hyperparameter tuning
    "mlflow>=2.14.0",
    "optuna>=4.0.0",
    # Logging
    "loguru>=0.7.2",
    # Utilities
    "tenacity>=8.3.0",
    "arrow>=1.3.0",
    # Data cache (parquet) + Yahoo Finance fallback
    "pyarrow>=16.0.0",
    "yfinance>=0.2.40",
    # Reddit sentiment
    "praw>=7.7.0",
]

[project.optional-dependencies]
# MetaTrader5 is Windows-only — install with: pip install -e ".[windows]"
windows = [
    "MetaTrader5>=5.0.45",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
